Fix group header z-index on keystore import screen

--- a/src/ui/components/pages/importKeystore/chooseAccounts.styl
+++ b/src/ui/components/pages/importKeystore/chooseAccounts.styl
@@ -21,6 +21,7 @@
 
 .accountsGroupHeader
   position: sticky;
+  z-index: 1;
   top: 0;
   display: flex;
   align-items: center;
